# agentic_legibility_chat_prototype

./: .gitignore  Cargo.toml  README.md  dev-with-mock.sh  dev.sh  mock-server.js
live_resources/: README.md
live_resources/endpoints/: cancel_share_code.md  choose_address_entry_method.md  confirm_new_address.md  create_service_identity_link.md  create_todo.md  delete_notification.md  delete_service_identity.md  delete_todo.md  duplicate_todo.md  enter_address_manually.md  find_address_by_postcode.md  get_driving_licence.md  get_headers.md  (+25 more)
src-mcp/: Cargo.toml
src-mcp/src/: context.rs  main.rs  protocol.rs
src-mcp/src/specs/: loader.rs  mod.rs  model.rs  search.rs
src-mcp/src/tools/: mod.rs  spec_tools.rs  stubs.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: legibility_chat_smoke.rs
src-tauri/resources/defaults/cards/: action_checklist.md  case_progress.md  key_facts.md
src-tauri/resources/defaults/states/: advice.md  execute.md  plan.md
src-tauri/resources/defaults/tools/state/: change_state.md  fetch.md  report_service_step.md  ui_input.md
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  config.rs  files.rs  live_resources.rs  mod.rs  state.rs  wizard.rs
src-tauri/src/llm/: anthropic.rs  client.rs  mod.rs  openai.rs  provider.rs  stream.rs  types.rs
src-tauri/src/mcp/: legibility_chat_client.rs  mod.rs  router.rs  spec_tools.rs
src-tauri/src/state_machine/: loader.rs  registry.rs  types.rs
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+25 files in other folders)
