[package]
name = "legibility-chat-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "legibility-chat-mcp"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
ureq = "2"
serde_yaml = "0.9"
walkdir = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
